# actix-web-security

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
src/: lib.rs
src/authentication/: middleware.rs  mod.rs
src/authentication/endpoint_matcher/: mod.rs
src/authentication/error/: error_handler.rs  error_type.rs  mod.rs
src/authentication/scheme/: authentication.rs  authentication_provider.rs  header_extractor.rs  mod.rs
src/authentication/scheme/basic/: authentication_provider.rs  header_extractor.rs  mod.rs  user_details_service.rs
src/authentication/scheme/bearer/: mod.rs
src/authentication/scheme/bearer/jwk/: default_jwk.rs  default_jwk_loader.rs  mod.rs
src/authentication/scheme/bearer/jwt/: authentication_provider.rs  default_jwt.rs  header_extractor.rs  mod.rs  user_details_service.rs
src/authentication/scheme/bearer/jwt/token/: mod.rs
src/authentication/scheme/bearer/jwt/token/decoder/: mod.rs  rsa_decoder.rs
src/user_details/: attachment.rs  mod.rs  request_extension.rs
tests/: basic_authentication_tests.rs  bearer_authentication_tests.rs  common.rs
