[package]
name = "actix-web-security"
version = "0.1.0-alpha.2"
authors = ["Christian Schaible <cschaible@users.noreply.github.com>"]
description = "Basic-Auth / OAuth2 easy-to-use authentication modules for actix web"
keywords = ["actix", "actix-web", "oauth", "oauth2", "openid"]
categories = ["web-programming::http-server", "authentication"]
repository = "https://github.com/cschaible/actix-web-security"
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = []

jwk-loader = ["reqwest"]

jwk-default-loader = ["jwk-loader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3" # MIT or Apache-2.0
async-trait = "0.1" # MIT or Apache-2.0
base64 = "0.13" # MIT/Apache-2.0
derive_more = "0.99" # MIT
downcast-rs = "1.2" # MIT/Apache-2.0
jsonwebtoken = "7.2" # MIT
once_cell = "1.5" # MIT or Apache-2.0
serde = "1" # MIT or Apache-2.0
serde_json = "1" # MIT or Apache-2.0

# Install openssl for reqwest if the 'jwk-loader' or 'jwk-default-loader' feature should be
# enabled as described here: https://docs.rs/openssl/0.10.32/openssl/#automatic
[dependencies.reqwest] # MIT/Apache-2.0
default-features = false
features = ["blocking", "json", "native-tls"] # Alternative: "rustls-tls-native-roots"
optional = true
version = "0.11"

[dev-dependencies]
actix-rt = "2"
actix-http = "2.2"
futures-util = { version = "0.3", default-features = false }

[profile.release]
opt-level = 3
lto = true
